# sensathon-2.0

./: .gitignore  README.md  baselines.py  config.py  dashboard.py  export_to_c.py  generate_dataset.py  presentation_notes.py  pyproject.toml  quick_demo.py  requirements-lock.txt  requirements.txt  run_demo.bat  run_demo.sh  stream_to_esp32.py  train_model.py
.github/workflows/: ci.yml
.hive/: issues.jsonl
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
cross_layer_ids/: README.md  handover_guide.md  requirements.txt  setup.py  test_system.py  walkthrough.md
cross_layer_ids/docs/: arduino_setup.md  generate_plots.py
cross_layer_ids/esp32/cross_layer_ids/: cross_layer_ids.ino  rf_model.h
cross_layer_ids/laptop/: dashboard.py  stream_to_esp32.py
esp32_firmware/: esp32_firmware.ino  platformio.ini  rf_model.h
esp32_firmware/src/: hardware_sensors.cpp  hardware_sensors.h  main.cpp
tests/: smoke_test_attacks.py  test_generate_dataset.py  test_stream_to_esp32.py
